--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <%= link_to "注文履歴", admin_store_orders_path(current_admin_store.id), class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to "データ確認", admin_store_data_graphs_path(current_admin_store.id), class: 'nav-link' %>
+            </li>
           <% end %>
         </ul>
       </div>
