--- a/app/views/admin/data_graphs/index.html.erb
+++ b/app/views/admin/data_graphs/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="row">
+  <div class="row mt-5">
+    <h2>データ</h2>
     <%= column_chart @items.pluck(:name, :earning), xtitle: "商品名", ytitle: "売上数" %>
   </div>
 </div>
