--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5">
-    <h5 style="margin: 0 auto; padding-bottom: 100px;">注文番号</h5>
+    <h3 style="margin: 0 auto; margin-top: 100px;">注文番号</h3>
   </div>
   <div class="row mb-5">
     <h5 style="margin: 0 auto;">ご注文ありがとうございました！</h5>
