--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="card mx-auto" style="width: 95%;">
           <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
-            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%;" %></div>
+            <div class="card-img-top"><%= image_tag item.image, style: "width: 100%; aspect-ratio: 3 / 2; object-fit: cover;" %></div>
             <h5 class="card-title long-name"><%= item.name %></h5>
             ￥ <%= item.with_tax_price.to_s(:delimited) %>
             <table class="table table-borderless table-sm" style="table-layout: fixed;">
