--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,28 +2,28 @@
   <div class="row mt-5">
     <h3>会員登録</h3>
   </div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_with model: @customer, url: customer_session_path, method: :post do |f| %>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
-      <%= f.label :ニックネーム, class: "bg-dark" %><br />
+      <%= f.label :ニックネーム %><br />
       <%= f.text_field :nickname, class: "form-control" %>
     </div>
   </div>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
-      <%= f.label :メールアドレス, class: "bg-dark" %><br />
+      <%= f.label :メールアドレス %><br />
       <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
     </div>
   </div>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
-      <%= f.label :パスワード, class: "bg-dark" %><br />
+      <%= f.label :パスワード %><br />
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
     </div>
   </div>
   <div class="row mt-3">
     <div class="col-8 mx-auto">
-      <%= f.label :パスワード再入力, class: "bg-dark" %><br />
+      <%= f.label :パスワード再入力 %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
   </div>
